# game-trees

./: Makefile  README.md  _CoqProject  rocq-game-trees.opam
.github/workflows/: ci.yml
theories/: Cotrees.v  Eval.v  Helpers.v  Relations.v  SAT.v  TicTacToe.v  Trees.v
